--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: hcw-athome-caregiver
 Section: unknown
 Priority: optional
 Maintainer: Olivier Bitsch <olivier.b@iabsis.com>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends: debhelper-compat (= 13), nodejs (>= 14)
 Standards-Version: 4.5.1
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Browser: https://salsa.debian.org/debian/hcw-athome-caregiver
