markdown view for terms and conditions

--- a/angular.json
+++ b/angular.json
@@ -38,13 +38,11 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/marked/marked.min.js"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./src/variables.scss",
-                "./src/styles"
-              ]
+              "includePaths": ["./src/variables.scss", "./src/styles"]
             },
             "es5BrowserSupport": true,
             "aot": true
@@ -122,13 +120,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -154,9 +147,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
