--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@schematics/angular": "^11.0.5",
     "core-js": "^2.5.4",
     "html2canvas": "^1.0.0-rc.1",
-    "hug-angular-lib": "http://builder/hug-angular/npm/hug-angular-lib-0.0.3.tgz",
+    "hug-angular-lib": "../../hug-angular/dist/hug-angular-lib/",
     "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
