--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.13",
+    "@angular/animations": "^10.2.5",
     "@angular/cdk": "^9.1.3",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/forms": "~10.2.5",
     "@angular/material": "^9.1.3",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@schematics/angular": "^11.0.5",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.13",
-    "@angular/cli": "~9.1.13",
+    "@angular/cli": "10",
     "@angular/compiler-cli": "~9.1.13",
     "@angular/language-service": "~9.1.13",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
