--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -16,7 +16,7 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Port 443;
-        proxy_pass http://${BACKEND_URL}:1337;
+        proxy_pass ${BACKEND_URL};
         proxy_set_header X-SSL-client-s-dn "";
     }
 
