--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -7,6 +7,8 @@ server {
     listen       80;
     server_name  _;
 
+    root   /usr/share/nginx/html;
+
     location ~/(api|socket\.io|__getcookie) {
         proxy_set_header Host $host;
         proxy_http_version 1.1;
@@ -20,9 +22,13 @@ server {
         proxy_set_header X-SSL-client-s-dn "";
     }
 
+    location /index.html {
+      expires     1m;
+      add_header  Cache-Control "private, no-cache, no-store";
+    }
+
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+      try_files $uri $uri/ /index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
