--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -3,17 +3,27 @@ map $http_upgrade $connection_upgrade {
         '' close;
     }
 
-
 server {
     listen       8081;
     server_name  _;
 
     root   /usr/share/nginx/html;
 
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy same-origin;
+
+    location ~* ^.+\.(svg|svgz|otf|woff|ttf|css|js|jpg|jpeg|gif|png|ico|gz|woff2)$ {
+        access_log off;
+        log_not_found off;
+        add_header Cache-Control "public, max-age=31536000";
+    }
+
     location /healthcheck {
-          access_log    off;
-          log_not_found off;
-          return 200 '{"message": "Health OK"}';
+        access_log    off;
+        log_not_found off;
+        return 200 '{"message": "Health OK"}';
     }
 
     location ~/(api|socket\.io|__getcookie) {
