updated some packages

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jquery/dist/jquery.min.js"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./src/variables.scss", "./src/styles"]
