--- a/package.json
+++ b/package.json
@@ -27,20 +27,19 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@schematics/angular": "^11.0.5",
     "core-js": "^2.5.4",
-    "html2canvas": "^1.0.0-rc.1",
+    "date-fns": "^2.30.0",
     "hcw-stream-lib": "0.0.6",
+    "html2canvas": "^1.0.0-rc.1",
     "jquery": "^3.5.1",
-    "jspdf": "^1.5.3",
-    "moment": "^2.24.0",
+    "jspdf": "^2.5.1",
     "ng-pick-datetime": "^7.0.0",
     "ngx-pagination": "^5.0.0",
-    "node-sass": "^9.0.0",
     "rxjs": "~6.6.3",
     "sails.io.js": "^1.2.1",
     "socket.io-client": "^2.4.0",
     "subsink": "^1.0.0",
     "yarn": "^1.22.17",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.11",
