--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^14.2.7",
+    "@angular/cdk": "14",
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
+    "@angular/core": "14",
     "@angular/forms": "^14.3.0",
-    "@angular/material": "^14.2.7",
+    "@angular/material": "14",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
@@ -36,21 +36,32 @@
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.3",
     "sails.io.js": "^1.2.1",
-    "socket.io-client": "^2.4.0",
+    "socket.io-client": "2.5",
     "subsink": "^1.0.0",
+    "tslib": "^1.10.0",
     "yarn": "^1.22.17",
-    "zone.js": "^0.14.2"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "14.2.11",
-    "@angular/compiler-cli": "^14.3.0",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "14",
+    "@angular/compiler-cli": "14",
     "@angular/language-service": "^14.3.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
@@ -60,7 +71,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.3",
     "typescript": "4.6.4",
     "wait-on": "^5.2.0"
   }
