--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               "src/assets"
             ],
             "styles": ["src/styles.scss"],
-            "scripts": ["./node_modules/jquery/dist/jquery.min.js"],
+            "scripts": [],
             "stylePreprocessorOptions": {
               "includePaths": [
                 "./src/variables.scss",
