Update one package

--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.3.0",
-    "@angular/cdk": "14",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
-    "@angular/core": "14",
+    "@angular/core": "14.3.0",
     "@angular/forms": "^14.3.0",
-    "@angular/material": "14",
+    "@angular/material": "14.2.0",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "@schematics/angular": "^11.0.5",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@schematics/angular": "^14.2.13",
     "core-js": "^3",
     "date-fns": "^2.30.0",
     "hcw-stream-lib": "0.0.12",
@@ -61,7 +61,7 @@
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
