--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^14",
     "@angular-devkit/build-angular": "^14.2.11",
     "@angular-eslint/builder": "14.4.0",
     "@angular-eslint/eslint-plugin": "14.4.0",
