Split js files to chunk + fix environment

--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,12 @@
               ]
             },
             "custom": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "customWebpackConfig": {
                 "path": "./webpack.config.js"
               }
