Adding custom script to chunk main js files

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "indexTransform": "./index-html-transform.js",
             "allowedCommonJsDependencies": [
               "socket.io-client",
               "sails.io.js",
