--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -10,9 +10,12 @@ server {
     root   /usr/share/nginx/html;
 
     add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Frame-Options "DENY";
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy same-origin;
+    add_header Strict-Transport-Security "max-age=31536000;"
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'self'; font-src 'self'";
+
 
     location ~* ^.+\.(svg|svgz|otf|woff|ttf|css|js|jpg|jpeg|gif|png|ico|gz|woff2)$ {
         access_log off;
