--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -13,7 +13,7 @@ server {
     add_header X-Frame-Options "DENY";
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy same-origin;
-    add_header Strict-Transport-Security "max-age=31536000;"
+    add_header Strict-Transport-Security "max-age=31536000;";
     add_header Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'self'; font-src 'self'";
 
 
