--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -30,6 +30,7 @@ server {
     }
 
     location ~/(api|socket\.io|__getcookie) {
+        client_max_body_size 3M;
         proxy_set_header Host $host;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
