--- a/angular.json
+++ b/angular.json
@@ -45,15 +45,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "src/variables.scss"],
             "scripts": [],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "./src/variables.scss",
-                "./src/styles",
-                "./node_modules"
-              ]
-            },
             "aot": true
           },
           "configurations": {
@@ -144,7 +137,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/variables.scss"
             ],
             "scripts": [],
             "assets": [
