Add footer.md into doctor, improve pdf report

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html2canvas": "^1.0.0-rc.1",
     "jspdf": "^2.5.1",
     "ng-pick-datetime": "^7.0.0",
+    "ngx-markdown": "^14.0.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.3",
     "sails.io.js": "^1.2.1",
