--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "rxjs/*": ["../node_modules/rxjs/*"]
+      "rxjs/*": [
+        "../node_modules/rxjs/*"
+      ]
     },
     "baseUrl": "./",
     "downlevelIteration": true,
@@ -14,7 +16,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -22,8 +24,8 @@
       "es2018",
       "dom"
     ],
-    "esModuleInterop": true
-
+    "esModuleInterop": true,
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions":{
     "enableIvy":true
