add ability to send whatsapp sms

--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,9 @@
               "bowser",
               "core-js",
               "rgbcolor",
+              "rgbcolor",
               "raf",
-              "rgbcolor"
+              "google-libphonenumber"
             ],
             "outputPath": "dist/hug-at-home",
             "index": "src/index.html",
