--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "@schematics/angular": "^16.2.8",
     "core-js": "^3",
     "date-fns": "^2.30.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "google-libphonenumber": "^3.2.34",
     "hcw-stream-lib": "0.0.15",
     "html2canvas": "^1.0.0-rc.1",
     "jspdf": "^2.5.1",
     "ngx-markdown": "^14.0.1",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "rxjs": "~6.6.3",
     "sails.io.js": "^1.2.1",
     "socket.io-client": "2.5",
