--- a/angular.json
+++ b/angular.json
@@ -137,9 +137,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "src/variables.scss",
               "src/styles.scss",
-              "src/variables.scss"
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css"
             ],
             "scripts": [],
             "assets": [
