--- a/angular.json
+++ b/angular.json
@@ -109,24 +109,24 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "hug-at-home:build"
+            "buildTarget": "hug-at-home:build"
           },
           "configurations": {
             "dev": {
-              "browserTarget": "hug-at-home:build:dev"
+              "buildTarget": "hug-at-home:build:dev"
             },
             "staging": {
-              "browserTarget": "hug-at-home:build:staging"
+              "buildTarget": "hug-at-home:build:staging"
             },
             "production": {
-              "browserTarget": "hug-at-home:build:production"
+              "buildTarget": "hug-at-home:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "hug-at-home:build"
+            "buildTarget": "hug-at-home:build"
           }
         },
         "test": {
