--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^16.2.14",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "17.3.12",
     "@angular/forms": "^17.3.12",
-    "@angular/material": "16.2.14",
+    "@angular/material": "17.3.10",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@schematics/angular": "^16.2.8",
+    "@types/marked": "^6.0.0",
     "core-js": "^3",
     "date-fns": "^2.30.0",
     "eslint-config-prettier": "^9.1.0",
