--- a/angular.json
+++ b/angular.json
@@ -47,9 +47,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/theme.scss",
               "src/styles.scss",
-              "src/variables.scss",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "src/variables.scss"
             ],
             "scripts": [],
             "aot": true
@@ -141,7 +141,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/theme.scss",
               "src/styles.scss",
               "src/variables.scss"
             ],
