Add version in root html

--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -44,7 +44,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ~* ^.+\.md$ {
+    location ~* ^.+\.(md|json)$ {
         access_log off;
         log_not_found off;
         expires -1;
