--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hcw-stream-lib": "0.0.16",
     "html2canvas": "^1.0.0-rc.1",
     "jspdf": "^2.5.1",
+    "moment-timezone": "^0.5.46",
     "ngx-markdown": "^16.0.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
