refs #7474, In app training - UX improvement for doctor app

--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "jspdf": "^2.5.1",
     "moment-timezone": "^0.5.46",
     "ngx-markdown": "^16.0.0",
+    "ngx-ui-tour-md-menu": "12",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
-    "rxjs": "~6.6.3",
+    "rxjs": "~7.7.0",
     "sails.io.js": "^1.2.1",
     "socket.io-client": "2.5",
     "subsink": "^1.0.0",
