--- a/nginx-docker.conf.template
+++ b/nginx-docker.conf.template
@@ -5,6 +5,8 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen       8081;
+    listen       4081 ssl;
+
     server_name  _;
 
     root   /usr/share/nginx/html;
@@ -62,5 +64,8 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+    ssl_certificate /etc/nginx/ssl/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/nginx/ssl/ssl-cert-snakeoil.key;
 
 }
