--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "date-fns": "^2.30.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "google-libphonenumber": "^3.2.34",
+    "google-libphonenumber": "^3.2.40",
     "hcw-stream-lib": "0.0.16",
-    "html2canvas": "^1.0.0-rc.1",
-    "jspdf": "^2.5.1",
-    "moment-timezone": "^0.5.46",
-    "ngx-markdown": "^16.0.0",
+    "jspdf": "^3.0.1",
+    "moment-timezone": "^0.5.48",
+    "ngx-markdown": "17.2.1",
     "ngx-ui-tour-md-menu": "12",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
