--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "google-libphonenumber": "^3.2.40",
-    "hcw-stream-lib": "0.0.16",
+    "hcw-stream-lib": "0.0.20",
     "jspdf": "^3.0.2",
     "moment-timezone": "^0.5.48",
     "ngx-markdown": "17.2.1",
@@ -42,10 +42,9 @@
     "prettier-eslint": "^16.3.0",
     "rxjs": "~7.7.0",
     "sails.io.js": "^1.2.1",
-    "socket.io-client": "2.5",
+    "socket.io-client": "^4.8.1",
     "subsink": "^1.0.0",
     "tslib": "^1.10.0",
-    "yarn": "^1.22.17",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
